--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div class="container mx-auto min-w-[640px] bg-[red] md:min-w-[768px] lg:min-w-[1024px] xl:min-w-[1280px] xxl:min-w-[1536px]">
+        <div class="container mx-auto max-w-[640px] bg-[red] md:max-w-[768px] lg:max-w-[1024px] xl:max-w-[1280px] xxl:max-w-[1536px]">
             <nav class=" flex items-center justify-between">
                 <img src="./images/logojon.svg" alt="">
                 <ul class="hidden ">
